5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1662_2973.log
== TEST (2019-04-15 15:08:49) 
-- CODE:
So = float(input("Digite posição inicial:"))
V = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))

S = So + v * t 


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S = So + v * t 
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:09:18) 
-- CODE:
So = float(input("Digite posicaoo inicial:"))
V = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))

S = So + v * t 


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S = So + v * t 
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:09:34) 
-- CODE:
So = float(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))

S = So + v * t 


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    S = So + v * t 
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:09:46) 
-- CODE:
So = float(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))

S = So + v * t 
print(S)


	

-- OUTPUT:
7202.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:10:55) 
-- CODE:
So = float(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))

S = So + v * t 

if (v<=100):
	print(S)

	

-- OUTPUT:
7202.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:11:38) 
-- CODE:
So = float(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))

S = So + v * t 
print(S)
	

-- OUTPUT:
7202.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:14:18) 
-- CODE:
So = float(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))


S = So + v * t 

if (v<=100)
	print("OK")
else:
	print("ACIMA")

-- ERROR:
File "XXXX", line 8
    if (v<=100)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:14:24) 
-- CODE:
So = float(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))


S = So + v * t 

if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:14:37) 
-- CODE:
So = float(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))


S = So + v * t 

if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:14:50) 
-- CODE:
So = float(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))


S = So + v * t 

if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- EXECUTION TIME:
0.194555
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:14:59) 
-- CODE:
So = float(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))


S = So + v * t 
print(S)

if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:15:06) 
-- CODE:
So = float(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))


S = So + v * t 
print(S)

if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- EXECUTION TIME:
0.155141
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:16:07) 
-- CODE:
So = float(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))



if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:16:41) 
-- CODE:
So = float(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))


S = So + v*t
print(S)
if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:17:40) 
-- CODE:
So = int(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))


S = So + v*t
print(S)
if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:17:58) 
-- CODE:
So = int(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))


S = So + v*t
print(S)
if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- EXECUTION TIME:
0.191003
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:20) 
-- CODE:
So = int(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))


S = So + v*t
print(round(S,1))
if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:18:36) 
-- CODE:
So = int(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))


S = So + v*t
print(round(S,1))
if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- EXECUTION TIME:
0.31032
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202.0
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470.0
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203.0
ACIMA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:37) 
-- CODE:
So = int(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))


S = So + v*t
print(round(S,1))
if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:43) 
-- CODE:
So = float(input("Digite posicaoo inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))


S = So + v*t
print(round(S,1))
if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:18:51) 
-- CODE:
So = float(input("Digite posicao inicial:"))
v = float(input("Digite velocidade do objeto:"))
t = float(input("Digite tempo de deslocamento:"))


S = So + v*t
print(round(S,1))
if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
7202.0
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:19:39) 
-- CODE:
So = int(input("Digite posicao inicial:"))
v = int(input("Digite velocidade do objeto:"))
t = int(input("Digite tempo de deslocamento:"))


S = So + v*t
print(round(S,1))
if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- OUTPUT:
7202
OK
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:19:46) 
-- CODE:
So = int(input("Digite posicao inicial:"))
v = int(input("Digite velocidade do objeto:"))
t = int(input("Digite tempo de deslocamento:"))


S = So + v*t
print(round(S,1))
if (v<=100):
	print("OK")
else:
	print("ACIMA")

-- EXECUTION TIME:
0.138663
-- TEST CASE 1:
---- input:
2
60
120
---- correct output:
7202
OK
---- user output:
7202
OK
-- TEST CASE 2:
---- input:
1
41
109
---- correct output:
4470
OK
---- user output:
4470
OK
-- TEST CASE 3:
---- input:
3
120
60
---- correct output:
7203
ACIMA
---- user output:
7203
ACIMA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
